--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -4,6 +4,84 @@
     <button mat-button color="primary" routerLink="/menu/pizza">Pizza</button>
     <button mat-button color="primary" routerLink="/menu/salad">Salad</button>
 
-
   </div>
 </section>
+
+
+<div fxLayout="row" fxLayoutAlign="center start" fxLayoutGap="20px">
+  <div fxFlex="20">
+
+    <mat-card routerLink="/menu/pizza" routerLinkActive="active" class="pizza-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Our Pizzas</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src="https://littlecaesars.com/static/1577121086-menu-img-extramostbestest.jpg">
+    <mat-card-content>
+      <p>
+        Great Deals!
+      </p>
+    </mat-card-content>
+
+  </mat-card>
+
+</div>
+
+
+  <div fxFlex="20">
+    <mat-card routerLink="/menu/salad" routerLinkActive="active" class="pizza-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Our Salads</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://upload.wikimedia.org/wikipedia/commons/9/94/Salad_platter.jpg">
+      <mat-card-content>
+        <p>
+          Great Deals!
+        </p>
+      </mat-card-content>
+
+    </mat-card>
+
+  </div>
+
+
+  <div fxFlex="20">
+    <mat-card routerLink="/menu/pizza" routerLinkActive="active" class="pizza-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Our Pizzas</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://cache.dominos.com/nolo/ca/en/6_18_7/assets/build/market/CA/_en/images/img/products/larges/F_TWISTBRD.jpg">
+      <mat-card-content>
+        <p>
+          Great Deals!
+        </p>
+      </mat-card-content>
+
+    </mat-card>
+
+
+  </div>
+
+
+  <div fxFlex="20">
+    <mat-card routerLink="/menu/pizza" routerLinkActive="active" class="pizza-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Our Pizzas</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTRJqZxmPOjWjRRdffbfoyjwUwLFjzY46uJFw&usqp=CAU">
+      <mat-card-content>
+        <p>
+          Great Deals!
+        </p>
+      </mat-card-content>
+
+    </mat-card>
+
+
+  </div>
+</div>
+
+
