--- a/src/app/menu/salad-list/salad-list.component.html
+++ b/src/app/menu/salad-list/salad-list.component.html
@@ -1,9 +1,13 @@
-<div class="row">
-  <div class="col-md-5">
-    <app-salad-item *ngFor="let salad of salads; let i = index" [salad]="salad" [index]="i"></app-salad-item>
-  </div>
 
-  <div class="col-md-7">
-    <router-outlet></router-outlet>
-  </div>
+
+Hello
+<div
+fxLayout="row wrap"
+fxLayout.lt-sm="column"
+fxLayoutGap="32px"
+fxLayoutAlign="start flex-start">
+<ng-container *ngFor="let salad of salads; let i = index">
+  <app-salad-item [salad]="salad" [index]="i" fxFlex="0 1 calc(25% - 32px)" (click)="onClick()"></app-salad-item>
+</ng-container>
 </div>
+
