Third item added

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -47,10 +47,10 @@
 
 
   <div fxFlex="20">
-    <mat-card routerLink="/menu/pizza" routerLinkActive="active" class="pizza-card">
+    <mat-card routerLink="/menu/sides" routerLinkActive="active" class="pizza-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Our Pizzas</mat-card-title>
+        <mat-card-title>Our Sides</mat-card-title>
       </mat-card-header>
       <img mat-card-image src="https://cache.dominos.com/nolo/ca/en/6_18_7/assets/build/market/CA/_en/images/img/products/larges/F_TWISTBRD.jpg">
       <mat-card-content>
