--- a/src/app/sides-form/sides-form.component.html
+++ b/src/app/sides-form/sides-form.component.html
@@ -1,8 +1,6 @@
-<h1>PIZZA</h1>
-<!-- Make one indpiendent Form Component -->
-
+SIDES FORM
 <div class="example-container">
-  <form [formGroup]="pizzaForm" (ngSubmit)="onSubmitPizza()">
+  <form [formGroup]="sidesForm" (ngSubmit)="onSubmitSides()">
     <mat-form-field appearance="fill">
       <mat-label>Name</mat-label>
       <input matInput formControlName="name">
@@ -29,7 +27,7 @@
 
 
     <div class="" formArrayName="toppings">
-      <div *ngFor="let toppingCtrl of pizzaForm.get('toppings')['controls']; let i = index"
+      <div *ngFor="let toppingCtrl of sidesForm.get('toppings')['controls']; let i = index"
       [formGroupName]="i">
 
         <mat-form-field appearance="fill">
@@ -54,15 +52,11 @@
     </div>
     <br>
 
-    <button type="submit" mat-button [disabled]="!pizzaForm.valid">Submit</button>
+    <button type="submit" mat-button [disabled]="!sidesForm.valid">Submit</button>
   </form>
 </div>
 <div>
 
-<h1>SALAD</h1>
-<app-salad-form></app-salad-form>
 
-<h1>SIDES</h1>
-<app-sides-form></app-sides-form>
+
 </div>
-<br><br><br><br>
