--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,14 +1,30 @@
-<section>
-  <div class="example-button-row">
 
-    <button mat-button color="primary" routerLink="/menu/pizza">Pizza</button>
-    <button mat-button color="primary" routerLink="/menu/salad">Salad</button>
-
-  </div>
-</section>
-
+<!-- <mat-grid-list cols="2" rowHeight="2:1">
+  <mat-grid-tile>11111111111111111</mat-grid-tile>
+  <mat-grid-tile>2222222222222</mat-grid-tile>
+  <mat-grid-tile>3333333333333</mat-grid-tile>
+  <mat-grid-tile>444444444444</mat-grid-tile>
+</mat-grid-list> -->
 
 <div fxLayout="row" fxLayoutAlign="center start" fxLayoutGap="20px">
+
+<div fxFlex="20">
+  <mat-card routerLink="/menu/specials" routerLinkActive="active" class="pizza-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Our Specials</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTRJqZxmPOjWjRRdffbfoyjwUwLFjzY46uJFw&usqp=CAU">
+    <mat-card-content>
+      <p>
+        Great Deals!
+      </p>
+    </mat-card-content>
+
+  </mat-card>
+
+
+</div>
   <div fxFlex="20">
 
     <mat-card routerLink="/menu/pizza" routerLinkActive="active" class="pizza-card">
@@ -64,12 +80,12 @@
 
   </div>
 
-
   <div fxFlex="20">
     <mat-card routerLink="/menu/pizza" routerLinkActive="active" class="pizza-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Our Pizzas</mat-card-title>
+        <mat-card-title>MAKE YOUR OWN!</mat-card-title>
+        <mat-card-subtitle>Login to make pizza</mat-card-subtitle>
       </mat-card-header>
       <img mat-card-image src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTRJqZxmPOjWjRRdffbfoyjwUwLFjzY46uJFw&usqp=CAU">
       <mat-card-content>
@@ -82,6 +98,7 @@
 
 
   </div>
+
 </div>
 
 
