added many new db params

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,4 +1,35 @@
 
+
+<mat-tab-group mat-align-tabs="center">
+  <mat-tab label="Specials" class="mat-display-4">
+
+    <app-specials-list></app-specials-list>
+  </mat-tab>
+  <mat-tab label="Pizza" class="mat-display-4">
+
+    <app-pizza-list></app-pizza-list>
+  </mat-tab>
+  <mat-tab label="Salads" class="mat-display-4">
+
+    <app-salad-list></app-salad-list>
+  </mat-tab>
+  <mat-tab label="Sides" class="mat-display-4">
+
+    <app-sides-list></app-sides-list>
+  </mat-tab>
+
+  <mat-tab label="Make" class="mat-display-4">
+
+    <app-sides-list></app-sides-list>
+  </mat-tab>
+</mat-tab-group>
+
+
+
+
+
+
+
 <!-- <mat-grid-list cols="2" rowHeight="2:1">
   <mat-grid-tile>11111111111111111</mat-grid-tile>
   <mat-grid-tile>2222222222222</mat-grid-tile>
@@ -6,7 +37,7 @@
   <mat-grid-tile>444444444444</mat-grid-tile>
 </mat-grid-list> -->
 
-<div fxLayout="row" fxLayoutAlign="center start" fxLayoutGap="20px">
+<!-- <div fxLayout="row" fxLayoutAlign="center start" fxLayoutGap="20px">
 
 <div fxFlex="20">
   <mat-card routerLink="/menu/specials" routerLinkActive="active" class="pizza-card">
@@ -99,6 +130,6 @@
 
   </div>
 
-</div>
+</div> -->
 
 
