--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
   <mat-sidenav-content>
     <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
     <main>
-      <app-banner></app-banner>
+      <!-- <app-banner></app-banner> -->
       <router-outlet></router-outlet>
     </main>
 
@@ -43,6 +43,33 @@
 
 </mat-sidenav-container>
 
+
+<button mat-icon-button>icon</button>
+<button mat-fab>Fab</button>
+<button mat-mini-fab>Mini Fab</button>
+
+
+<div class="mat-display-4">This is display 4</div>
+<div class="mat-display-3">This is display 3</div>
+<div class="mat-display-2">This is display 2</div>
+<div class="mat-display-1">This is display 1</div>
+
+<div class="mat-headline">This ia a heading for h1</div>
+<div class="mat-title">This is a heading for h2</div>
+<div class="mat-subheading-2">This is a heading for h3</div>
+<div class="mat-subheading-1">This is a heading for h4</div>
+
+<div class="mat-body-1">This is body text</div>
+<div class="mat-body-2">This bold is body text</div>
+<div class="mat-caption">This is caption text</div>
+
+<div class="mat-typography">
+
+<h1>This is a h1</h1>
+<h2>This is a h2</h2>
+<h3>This is a h3</h3>
+<h4>This is a h4</h4>
+</div>
 
 
 <!--
