--- a/src/app/menu/pizza-list/pizza-list.component.html
+++ b/src/app/menu/pizza-list/pizza-list.component.html
@@ -1,6 +1,6 @@
 
 
-
+<!--
 <div
   fxLayout="row wrap"
   fxLayout.lt-sm="column"
@@ -10,4 +10,55 @@
     <app-pizza-item [pizza]="pizza" [index]="i" fxFlex="0 1 calc(25% - 32px)" (click)="onClick()"></app-pizza-item>
   </ng-container>
 </div>
+ -->
+
+
+ <!-- <mat-selection-list #shoes [multiple]="false">
+  <mat-list-option class="list-item" *ngFor="let pizza of pizzas; let i = index" (click)="onClick()">
+    <img class="list-image" [src]="pizza.imagePath" [alt]="pizza.name">
+    <div class="list-content">
+      {{ pizza.name }}
+      {{ pizza.subName }}
+    </div>
+
+  </mat-list-option>
+</mat-selection-list>
+
+<p>
+  Option selected: {{shoes.selectedOptions.selected[0]?.value}}
+</p> -->
+<div class="mat-display-3">Pizza</div>
+
+<mat-grid-list  [cols]="breakpoint"
+rowHeight="2:0.5"
+(window:resize)="onResize($event)"
+(click)="onClick()"
+>
+  <mat-grid-tile class="pizza-card"
+  *ngFor="let pizza of pizzas; let i = index"
+  (click)="onClick()"
+  [ngStyle]="{'background-image': '
+
+  url('+ '../../../assets/img/pizza/' + pizza.imagePath + ' ' +')'}">
+    <div class="story">
+      <figure class="story_shape">
+          <img src="../../../assets/img/pizza/{{pizza.imagePath}}" [alt]="pizza.name" class="story__img" layout-fill>
+          <figcaption  class="mat-display-1 story__caption">{{pizza.name}}</figcaption>
+      </figure>
+
+    </div>
+
+  </mat-grid-tile>
+
+</mat-grid-list>
+
+<!-- linear-gradient(-225deg, rgba(0,0,0,0.6) 50%, rgba(0,36,61,0.6) 80%), -->
+
+
+
+
+
+
+
+
 
