--- a/src/app/menu/pizza-list/pizza-list.component.html
+++ b/src/app/menu/pizza-list/pizza-list.component.html
@@ -45,7 +45,7 @@ class="grid-list"
     <div class="story">
 
       <figure class="story_shape">
-          <img src="../../../assets/img/pizza/{{pizza.imagePath}}" [alt]="pizza.name" class="story__img" layout-fill>
+          <img src="assets/img/pizza/{{pizza.imagePath}}" [alt]="pizza.name" class="story__img" layout-fill>
           <div class="bottom-left">{{pizza.name}}</div>
           <div class="top-right">{{pizza.price}}</div>
           <figcaption  class="mat-display-1 story__caption">
