--- a/src/app/toppings-select/toppings-select.component.html
+++ b/src/app/toppings-select/toppings-select.component.html
@@ -6,18 +6,16 @@
 
  <mat-list role="list">
   <mat-list-item role="listitem">
+    <div>
   <mat-checkbox
   (change)="OnChange($event)"
   *ngFor="let topping of toppings"
   value={{topping.name}}
   id={{topping.id}}
   >{{topping.name}}</mat-checkbox>
+</div>
   </mat-list-item>
 </mat-list>
-
-
-
-
 
 <mat-select name="toppingString" [(value)]="selectedTopping" placeholder="Country">
 
