--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,9 @@
-
-
 <router-outlet></router-outlet>
 
-
-
+<div *ngIf="loaded;"
+class="center">
+  <app-mat-spinner-overlay
+  overlay="true"
+  diameter="500"
+  ></app-mat-spinner-overlay>
+</div>
