--- a/src/app/menu/specials-list/specials-list.component.html
+++ b/src/app/menu/specials-list/specials-list.component.html
@@ -1,5 +1,8 @@
 <div class="mat-display-3">Specials</div>
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+
 <div
+*ngIf="!isLoading"
 fxLayout="row wrap"
 fxLayout.lt-sm="column"
 fxLayoutGap="32px"
