--- a/src/app/menu/pizza-list/pizza-list.component.html
+++ b/src/app/menu/pizza-list/pizza-list.component.html
@@ -1,7 +1,9 @@
-<div class="mat-display-3">Pizza</div>
 
+
+<div class="mat-display-3">Pizza</div>
+<mat-spinner *ngIf="isLoading"></mat-spinner>
 <mat-grid-list [cols]="breakpoint" color="primary" rowHeight="2:0.5" (window:resize)="onResize($event)"
-  class="grid-list">
+  class="grid-list" *ngIf="!isLoading">
 
   <mat-grid-tile class="grid-tile" [ngStyle]="{'background-color':'primary'}"
     *ngFor="let pizza of pizzas; let i = index" (click)="onOpenNutrition(pizza)">
