--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,17 +12,17 @@
 
       <!-- <app-banner></app-banner> -->
      <!-- <app-banner></app-banner> -->
-     
+
       <router-outlet></router-outlet>
       <!-- <app-pizz-shop></app-pizz-shop> -->
     </main>
 
-
+    <app-footer></app-footer>
   </mat-sidenav-content>
 
 </mat-sidenav-container>
 
-
+<!--
 <button mat-icon-button>icon</button>
 <button mat-fab>Fab</button>
 <button mat-mini-fab>Mini Fab</button>
@@ -49,4 +49,4 @@
 <h3>This is a h3</h3>
 <h4>This is a h4</h4>
 </div>
-
+ -->
