--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,5 +1,7 @@
 
+
   <mat-tab-group mat-align-tabs="center" class="tabs">
+    <mat-divider [inset]="true"></mat-divider>
     <mat-tab label="Signature Pizzas" class="mat-display-4">
 
       <app-specials-list></app-specials-list>
