--- a/src/app/menu/salad-list/salad-nutrition/salad-nutrition.component.html
+++ b/src/app/menu/salad-list/salad-nutrition/salad-nutrition.component.html
@@ -2,7 +2,7 @@
 
   <div class="toppings-banner">
 
-    <img src="assets/img/salad/{{salad.imagePath}}" [alt]="salad.name" class="modal-image" layout-fill>
+    <img src="assets/img/pasta/{{salad.imagePath}}" [alt]="salad.name" class="modal-image" layout-fill>
     <h4 class="nutrition-banner-name">
       <div class="nutrition-banner-name-span nutrition-banner-name-span--1">{{ salad.name }}</div>
     </h4>
