--- a/src/app/menu/pizza-list/pizza-list.component.html
+++ b/src/app/menu/pizza-list/pizza-list.component.html
@@ -1,5 +1,5 @@
 <div class="pizza-content">
-  <div class="pizza-title">Old Favourites</div>
+  <div class="mat-display-2">Old Favourites</div>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
   <mat-grid-list [gutterSize]="10" [cols]="breakpoint" color="primary" rowHeight="2:0.5"
     (window:resize)="onResize($event)" class="grid-list" *ngIf="!isLoading">
