--- a/src/app/menu/salad-list/salad-list.component.html
+++ b/src/app/menu/salad-list/salad-list.component.html
@@ -1,6 +1,6 @@
 
 <div class="salad-content">
-<div class="salad-title">Pasta and Salad</div>
+<div class="mat-display-2">Pasta and Salad</div>
 <mat-spinner *ngIf="isLoading"></mat-spinner>
 <mat-grid-list [gutterSize]="10" [cols]="breakpoint" color="primary" rowHeight="2:0.5" (window:resize)="onResize($event)"
   class="grid-list" *ngIf="!isLoading">
@@ -11,7 +11,7 @@
     <div class="story">
 
       <figure class="story_shape">
-        <img src="assets/img/salad/{{salad.imagePath}}" [alt]="salad.name" class="story__img" layout-fill>
+        <img src="assets/img/pasta/{{salad.imagePath}}" [alt]="salad.name" class="story__img" layout-fill>
 
 
         <div class="salad-banner-name-span">
