--- a/src/app/menu/sides-list/sides-list.component.html
+++ b/src/app/menu/sides-list/sides-list.component.html
@@ -1,5 +1,5 @@
 <div class="side-content">
-  <div class="sides-title">Classic Sides</div>
+  <div class="mat-display-2">Classic Sides</div>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
   <mat-grid-list [gutterSize]="10" [cols]="breakpoint" color="primary" rowHeight="2:0.5"
     (window:resize)="onResize($event)" class="grid-list" *ngIf="!isLoading">
