--- a/src/app/menu/specials-list/specials-list.component.html
+++ b/src/app/menu/specials-list/specials-list.component.html
@@ -1,5 +1,5 @@
 <div class="specials-content">
-  <div class="specials-title">Signature Pizzas</div>
+  <div class="mat-display-2">Signature Pizzas</div>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
   <mat-grid-list [gutterSize]="10" [cols]="breakpoint" color="primary" rowHeight="2:0.5"
     (window:resize)="onResize($event)" class="grid-list" *ngIf="!isLoading">
